fix(layout): on mobile cards were looking bad

--- a/components/PostPreview/postPreview.module.css
+++ b/components/PostPreview/postPreview.module.css
@@ -20,3 +20,9 @@
   font-size: var(--18px);
   font-weight: 350;
 }
+
+@media (max-width: 800px) {
+  .root {
+    max-width: 100vw;
+  }
+}
